--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -7,11 +7,13 @@
 <html lang="en">
     <head>
         <title>Home</title>
-    </head>
+      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Rock+Salt&display=swap" rel="stylesheet">
+      <link href="styles/restaurantstyles.css" rel="stylesheet" type="text/css" />
     <style>
     h1 {text-align: center;}
     p {text-align: center;}
     </style>
+  </head>
     <body>
         <header>
             <h1>Paul's Rest Stop</h1>
@@ -32,7 +34,7 @@
 
         <footer>
           <hr />
-          <p> 407 Emerald Street, Moore, OK 73160 <br /> <br />
+          <p> 407 Emerald Street, Moore, OK 73160 <br />
           (405) 999-0010 </p>
         </footer>
     </body>
