--- a/Restaurant/menu.html
+++ b/Restaurant/menu.html
@@ -7,13 +7,19 @@
 <html lang="en">
     <head>
         <title>Menu</title>
-    </head>
+      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Rock+Salt&display=swap" rel="stylesheet">
+        <link href="styles/restaurantstyles.css" rel="stylesheet" type="text/css" />
+
+
     <style>
     h1 {text-align: center;}
     p {text-align: center;}
-    table { margin-left: auto; margin-right: auto;}
-}
+    table { margin-left: auto; margin-right: auto; text-align: center;}
+    th, caption {font-size: 1.3em;}
+    caption {font-weight:bold;}
+    td {padding: 15px;}
     </style>
+  </head>
     <body>
         <header>
             <h1>Paul's Rest Stop</h1>
@@ -26,7 +32,7 @@
 
         <section>
           <br /><br />
-          <table style="text-align:center;">
+          <table>
             <tr>
               <th>Burger and Fries</th><th>Hot Dog and Chips</th><th>Italian Sausage and Peppers</th>
             </tr>
@@ -37,14 +43,28 @@
             </tr>
             <tr><td>   </td><td> <br /></td></tr>
             <tr>
-              <th>Tenderloin Sandshich and Chips</th><th>House Salad</th><th>Brisket Sandwich and Fries</th>
+              <th>Tenderloin Sandwhich and Chips</th><th>House Salad</th><th>Brisket Sandwich and Fries</th>
             </tr>
             <tr>
               <td>Really Hits the Spot!<br />Plain or Sesame Seed Bun<br />Pickle, onion, tomato, and lettuce<br />Served with our house-made chips<br />$8.95<br /><br /><br /></td>
               <td>On the Lighter Side<br />Your choice - with or without cheese<br />Iceberg lettuce, tomatoes, peppers<br />Thousand Island or Ranch<br />Dressing Served with a dinner roll<br />$6.95<br /> <br /></td>
               <td>A Taste of Texas!<br />Smoked Brisket on thick-cut<br />Texas Toast<br />Cole Slaw<br />Served with our famous thick-cut<br />french fries<br />$7.95</td>
             </tr>
-            </table>
+          </table>
+            <br /> <br />
+          <table>
+            <caption>Beverages</caption>
+            <tr>
+            <td>Root Beer<br />$3.50</td>
+              <td>Bottled Water<br />$1.25</td>
+              <td>Lemonade<br />$1.00</td>
+              <td>Iced Tea<br />$1.25</td>
+            </tr>
+          </table>
+        
+
+
+
             <br />
             <br />
             <br />
@@ -52,7 +72,7 @@
             <br />
         <footer>
           <hr />
-          <p> 407 Emerald Street, Moore, OK 73160 <br /> <br />
+          <p> 407 Emerald Street, Moore, OK 73160 <br />
           (405) 999-0010 </p>
         </footer>
     </body>
