added new code-alongs, completed restaurant site

--- a/Portfolio/bootstrapexamples.html
+++ b/Portfolio/bootstrapexamples.html
@@ -45,6 +45,39 @@
               </div>
             </div>
 
+            <div class="accordion" id="accordionExample">
+              <div class="card">
+                <div class="card-header" id="portfolio01">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      My First Portfolio Piece
+                    </button>
+                  </h5>
+              </div>
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  <p><a href=" " target="_blank">Name of Website 1</a></p>
+                  <figure><img src="images/website-1778529.png" alt="Screenshot of home page" /></figure>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="portfolio02">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      My Second Portfolio Piece
+                    </button>
+                  </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                  <p><a href=" " target="_blank">Name of Website 2</a></p>
+                  <figure><img src="images/website-1778529.png" alt="Screenshot of home page" /></figure>
+                </div>
+              </div>
+
+
+            </div>
           </div>
 
 
