--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -7,35 +7,57 @@
 <html lang="en">
     <head>
         <title>Home</title>
-      <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Rock+Salt&display=swap" rel="stylesheet">
-      <link href="styles/restaurantstyles.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Rock+Salt&display=swap" rel="stylesheet">
+        <link href="styles/restaurantstyles.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <style>
     h1 {text-align: center;}
     p {text-align: center;}
+    noscript {
+      text-weight:6em;
+    }
     </style>
+
   </head>
+
     <body>
+      <div class="container">
+
         <header>
             <h1>Paul's Rest Stop</h1>
         </header>
 
         <nav>
           <hr />
-          <a href="index.html">Home</a> <a href="menu.html">Menu</a> <a href="contact.html">Contact Us</a>           <hr />
+          <a class="btn badge-pill" href="index.html"><i class="material-icons md-18">home</i></a> <a class="btn badge-pill" href="menu.html">Menu</a> <a class="btn badge-pill" href="contact.html">Contact Us</a>           <hr />
         </nav>
-<body>
-<img style="display: block; margin-left:auto; margin-right:auto;" src="Images/Burger.jpg" alt="Burger and Fries" width=400px />
-<p>Paul's Rest Stop was established in the summer of 2017. It seeks to provide comfort food to customers taking a rest from hectic lives. Come join us for a meal and some friendly conversation!</p>
-<br />
-<br />
-<br />
-<br />
-<br />
 
-        <footer>
-          <hr />
-          <p> 407 Emerald Street, Moore, OK 73160 <br />
-          (405) 999-0010 </p>
-        </footer>
+        <div class="jumbotron" maxwidth="70%">
+          <h2>*** We are opening a new location in Tulsa in March! ***</h2>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <img style="display: block; margin-left:auto; margin-right:auto;" src="Images/Burger.jpg" alt="Burger and Fries" class="img-fluid"/>
+          </div>
+          <div class="col-sm-8">
+            <p>Paul's Rest Stop was established in the summer of 2017. It seeks to provide comfort food to customers taking a rest from hectic lives. Come join us for a meal and some friendly conversation!</p>
+          </div>
+        </div>
+
+        <div class="footer">
+          <footer>
+            <hr />
+            <p> 407 Emerald Street, Moore, OK 73160 <br />
+            (405) 999-0010 </p>
+          </footer>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <noscript>This site is best viewed with JavaScript enabled!</noscript>
+      </div>
     </body>
 </html>
