--- a/Restaurant/contact.html
+++ b/Restaurant/contact.html
@@ -7,13 +7,20 @@
 <html lang="en">
     <head>
         <title>Contact Us</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Rock+Salt&display=swap" rel="stylesheet">
         <link href="styles/restaurantstyles.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script type="text/javascript" src="Scripts/contact.js"></script>
+
+
     <style>
       h1 {text-align: center;}
       p {text-align: center;}
       table .right {text-align: right; font-weight:bold; font-size:1.3em;}
     </style>
+
   </head>
 
     <body>
@@ -21,38 +28,70 @@
             <h1>Paul's Rest Stop</h1>
         </header>
 
-        <nav>
-          <hr />
-          <a href="index.html">Home</a> <a href="menu.html">Menu</a> <a href="contact.html">Contact Us</a>
-          <hr />
-        </nav>
-<body>
-<form action="restaurantcontact.html" method="POST">
-  <table>
-  <tr><td class="right">Name: </td><td><input type="text" name="name" / ></td></tr>
-  <tr><td class="right">Email: </td><td><input type="text" name="email" / > </td></tr>
-  <tr><td class="right">Phone: </td><td><input type="text" name="phone" / > </td></tr>
-  <tr><td class="right">Reason for Inquiry: </td><td><select name="reason">
-    <option value="Catering">Catering</option>
-    <option value="Private Party">Private Party</option>
-    <option value="Feedback">Feedback</option>
-    <option value="Other">Other</option>
-    </select></td></tr>
-  <tr><td class="right">Additional information:</td><td><textarea name="Additional"></textarea></td></tr>
-  <tr><td class="right">Have you been to the restaurant?</td><td>
-  <input type="radio" name="beenthere" value=NO checked / > No
-  <input type="radio" name="beenthere" value=YES /> Yes</td></tr>
-  <tr><td class="right">Best days to contact you: </td><td><input type="checkbox"  name="choices" value="M"> M <input type="checkbox"  name="choices" value="T"> T <input type="checkbox"  name="choices" value="W"> W <input type="checkbox"  name="choices" value="Th"> Th <input type="checkbox"  name="choices" value="F"> F</td></tr>
-  <tr><td>     </td><td><input type="submit" value="Send Request"></td></tr>
-  </table>
-  <br />
 
-  </form>
+<body>
+  <div class="container">
+
+    <nav style="text-align:left">
+      <hr />
+      <a class="btn badge-pill" href="index.html"><i class="material-icons md-18">home</i></a> <a class="btn badge-pill" href="menu.html">Menu</a> <a class="btn badge-pill" href="contact.html">Contact Us</a>           <hr />
+    </nav>
+
+
+    <form action ="">
+      <div class="form-group">
+        <label for="name">Name: </label>
+        <input type="text" class="form-group" id="name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email: </label>
+        <input type="text" class="form-group" id="email">
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone: </label>
+        <input type="text" class="form-group" id="phone">
+      </div>
+      <div class="form-group">
+        <label for="reason">Reason for Inquiry: </label>
+        <select class="form-group" id="reason">
+          <option> </option>
+          <option>Catering</option>
+          <option>Private Party</option>
+          <option>Feedback</option>
+          <option>Other</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="additional" style:"vertical-align:top">Additional Information: </label>
+        <textarea class="form-group" rows="1" id="additional"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="beenThere">Have you been to the restaurant? </label>
+        <label class="radio-inline"><input type="radio" name="yes">Yes</label>
+        <label class="radio-inline"><input type="radio" name="no" checked>No</label>
+      </div>
+      <div class="form-group">
+        <label for="bestDay">Best days to contact you: </label>
+        <label class="checkbox-inline"><input type="checkbox" value="mon">M  </label>
+        <label class="checkbox-inline"><input type="checkbox" value="tue">Tu  </label>
+        <label class="checkbox-inline"><input type="checkbox" value="wed">W  </label>
+        <label class="checkbox-inline"><input type="checkbox" value="thu">Th  </label>
+        <label class="checkbox-inline"><input type="checkbox" value="fri">F  </label>
+      </div>
+      <button type="submit" class="btn btn-default" onclick="return validateForm()">Submit</button>
+    </form>
+
 
         <footer>
           <hr />
           <p> 407 Emerald Street, Moore, OK 73160 <br />
           (405) 999-0010 </p>
         </footer>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <noscript>This site is best viewed with JavaScript enabled!</noscript>
+      </div>
     </body>
 </html>
